--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.21.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
