--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "cobe": "^0.6.3",
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
@@ -29,5 +29,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
