--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@tabler/icons-react": "^3.21.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.13.1",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.4",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.5",
     "three": "^0.170.0"
   },
   "devDependencies": {
